--- a/newfile.html
+++ b/newfile.html
@@ -7,7 +7,10 @@
 <body>
 
 <h1>Hello World!</h1>
-<p>This is the first file in my new git repository</p>
+<div>
+	<img src="img_hello_world.jpg" alt="Hello world from space" style="width:100%;max-width:960px">
+</div>
+<p>This is the first file in my new git repo.</p>
 <p>A new line in our file!</p>
 
 </body>
